--- a/src/main/resources/se/trixon/netbeans/websearch/Bundle.properties
+++ b/src/main/resources/se/trixon/netbeans/websearch/Bundle.properties
@@ -1,2 +1,5 @@
+OpenIDE-Module-Name=Web Search
+OpenIDE-Module-Long-Description=Search the web for selected text
+OpenIDE-Module-Display-Category=Tools
 
 WebsearchPanel.header1Label.text=URL for web search (must contain %s)
