--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,33 @@
     <packaging>nbm</packaging>
     <name>websearch</name>
 
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <id>trixon</id>
+            <name>Patrik Karlström</name>
+            <roles>
+                <role>developer</role>
+            </roles>
+            <email>patrik@trixon.se</email>
+            <url>https://trixon.se</url>
+            <timezone>+1</timezone>
+        </developer>
+    </developers>
+
+    <scm>
+        <url>https://github.com/trixon/netbeans-websearch-plugin</url>
+        <connection>scm:git:git://github.com/trixon/netbeans-websearch-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:trixon/netbeans-websearch-plugin.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
     <build>
         <plugins>
             <plugin>
@@ -14,6 +41,13 @@
                 <artifactId>nbm-maven-plugin</artifactId>
                 <version>4.8</version>
                 <extensions>true</extensions>
+                <configuration>
+                    <licenseFile>license.txt</licenseFile>
+                    <author>Patrik Karlström</author>
+                    <homePageUrl>https://github.com/trixon/netbeans-websearch-plugin</homePageUrl>
+                    <licenseName>Apache License, Version 2.0</licenseName>
+                    <licenseFile>LICENSE</licenseFile>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -22,6 +56,8 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
+                    <showDeprecation>true</showDeprecation>
+                    <debug>false</debug>
                 </configuration>
             </plugin>
             <plugin>
@@ -41,7 +77,7 @@
             </plugin>
         </plugins>
     </build>
-    
+
     <dependencies>
         <dependency>
             <groupId>org.netbeans.api</groupId>
